--- a/app/css/site.css
+++ b/app/css/site.css
@@ -5,7 +5,8 @@
 html {
   font-size: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  font-weight: 300; }
+  font-weight: 300;
+  margin-left: calc(100vw - 100%); }
 
 body {
   width: 100%;
