--- a/src/css/site.scss
+++ b/src/css/site.scss
@@ -38,6 +38,7 @@ html {
     font-size: 100%;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     font-weight: 300;
+    margin-left: calc(100vw - 100%);
 }
 
 body {
