Completed CSS rework for using grid instead of foundation

--- a/app/css/site.css
+++ b/app/css/site.css
@@ -12,8 +12,11 @@ body {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  background-color: #f0f0f0;
+  background-color: white;
   line-height: 1.6; }
+  @media (min-width: 600px) {
+    body {
+      background-color: #f0f0f0; } }
   @media (min-width: 768px) {
     body {
       max-width: 900px; } }
@@ -44,9 +47,11 @@ h2 {
       grid-template-columns: 13% 87%; } }
 
 .contentCell {
+  height: fit-content;
   display: grid;
   grid-row-gap: 0;
-  grid-template-columns: 50% 50%; }
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto; }
   @media (min-width: 600px) {
     .contentCell {
       grid-template-columns: 30% 70%;
@@ -216,3 +221,84 @@ h2 {
   background-color: white;
   margin-top: 8px;
   transition: all 0.3s ease-in-out; }
+
+#hpimg1 {
+  position: absolute;
+  top: 5rem;
+  z-index: 20;
+  transform: scale(0.7) rotate(-5deg);
+  -ms-transform: scale(0.7) rotate(-5deg);
+  /* IE 9 */
+  -webkit-transform: scale(0.7) rotate(-5deg);
+  /* Opera, Chrome, and Safari */ }
+  @media (min-width: 600px) {
+    #hpimg1 {
+      top: 14rem; } }
+
+#hpimg2 {
+  position: absolute;
+  top: 14rem;
+  z-index: 21;
+  transform: scale(0.7) rotate(7deg);
+  -ms-transform: scale(0.7) rotate(7deg);
+  /* IE 9 */
+  -webkit-transform: scale(0.7) rotate(7deg);
+  /* Opera, Chrome, and Safari */ }
+  @media (min-width: 600px) {
+    #hpimg2 {
+      top: 23rem; } }
+
+#hpimg3 {
+  position: absolute;
+  top: 14rem;
+  padding-left: 8rem;
+  z-index: 22;
+  transform: scale(0.7) rotate(-8deg);
+  -ms-transform: scale(0.7) rotate(-8deg);
+  /* IE 9 */
+  -webkit-transform: scale(0.7) rotate(-8deg);
+  /* Opera, Chrome, and Safari */ }
+  @media (min-width: 600px) {
+    #hpimg3 {
+      top: 23rem; } }
+
+#hpimg4 {
+  position: absolute;
+  top: 22rem;
+  z-index: 23;
+  transform: scale(0.7) rotate(-5deg);
+  -ms-transform: scale(0.7) rotate(-5deg);
+  /* IE 9 */
+  -webkit-transform: scale(0.7) rotate(-5deg);
+  /* Opera, Chrome, and Safari */ }
+  @media (min-width: 600px) {
+    #hpimg4 {
+      top: 31rem; } }
+
+#hpimg5 {
+  position: absolute;
+  top: 22rem;
+  padding-left: 8rem;
+  z-index: 24;
+  transform: scale(0.7) rotate(10deg);
+  -ms-transform: scale(0.7) rotate(10deg);
+  /* IE 9 */
+  -webkit-transform: scale(0.7) rotate(10deg);
+  /* Opera, Chrome, and Safari */ }
+  @media (min-width: 600px) {
+    #hpimg5 {
+      top: 31rem; } }
+
+.slogan {
+  z-index: 30;
+  width: 80%;
+  padding-top: 2rem;
+  text-align: right; }
+  .slogan__highlight {
+    color: #0046a0;
+    font-size: 1.5rem;
+    font-weight: 300; }
+  @media (min-width: 600px) {
+    .slogan {
+      padding-top: 15rem;
+      width: 60%; } }
