--- a/src/css/site.scss
+++ b/src/css/site.scss
@@ -90,7 +90,8 @@ h2 {
     display: grid;
     grid-row-gap: 0;
     grid-template-columns: 50% 50%;
-    grid-template-rows: auto;
+    grid-template-rows: 18rem;
+    grid-auto-rows: auto;
     @include breakpoint(phablet) {
         grid-template-columns: 30% 70%;
         grid-row-gap: 1.75rem;
