--- a/app/css/site.css
+++ b/app/css/site.css
@@ -113,8 +113,7 @@ h2 {
   /* IE 9 */
   -webkit-transform: rotate(7deg);
   /* Opera, Chrome, and Safari */
-  width: 100%;
-  max-width: fit-content;
+  max-width: 100%;
   margin-left: -0.5rem;
   padding-top: 2rem; }
   @media (min-width: 600px) and (min-height: 721px) {
