--- a/src/css/site.scss
+++ b/src/css/site.scss
@@ -163,8 +163,7 @@ h2 {
         /* IE 9 */
         -webkit-transform: rotate(7deg);
         /* Opera, Chrome, and Safari */
-        width: 100%;
-        max-width: fit-content;
+        max-width: 100%;
         margin-left: -0.5rem;
         padding-top: 2rem;
         @include breakpoint(phablet) {
