--- a/src/css/site.scss
+++ b/src/css/site.scss
@@ -98,7 +98,7 @@ h2 {
     display: grid;
     grid-row-gap: 0;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 18rem;
+    grid-template-rows: 18rem auto 1fr;
     grid-auto-rows: auto;
     @include breakpoint(phablet) {
         grid-template-columns: 30% 70%;
