--- a/src/css/site.scss
+++ b/src/css/site.scss
@@ -1,21 +1,21 @@
 @mixin breakpoint($point) {
-    @if $point==desktopXL {
-        @media (min-width: 1920px) {
+    @if $point==desktopXL  {
+        @media (min-width: 1920px) and (min-height: 721px) {
             @content;
         }
     }
-    @else if $point==desktop {
-        @media (min-width: 1280px) {
+    @else if $point==desktop  {
+        @media (min-width: 1280px) and (min-height: 721px){
             @content;
         }
     }
     @else if $point==laptop {
-        @media (min-width: 1024px) {
+        @media (min-width: 1024px)  and (min-height: 721px) {
             @content;
         }
     }
     @else if $point==tablet {
-        @media (min-width: 768px) {
+        @media (min-width: 768px) and (min-height: 721px) {
             @content;
         }
     }
@@ -287,6 +287,7 @@ h2 {
     right: 20px;
     @include breakpoint(phablet) {
         display: none;
+        
     }
 }
 
